--- a/public/index.html
+++ b/public/index.html
@@ -5,19 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
-      rel="stylesheet"
+      content="Real time chat developed by Fabio Alcocer"
     />
     <style>
       * {
-        font-family: "Open Sans", sans-serif;
+        font-family: 'Segoe UI', sans-serif;
         margin: 0;
       }
     </style>
-    <title>React App</title>
+    <title>Real time chat - Fabio Alcocer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
